--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_send_password.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_send_password.htm
@@ -15,7 +15,7 @@
         Passwort: <b><font color="#B52C21">[Passwort]</font></b><br />
         <br />
         Link zu Ihrer persönlichen 
-        Benutzeroberfläche:<br>
+        Benutzeroberfläche:<br />
 		</font><font face="Verdana">
 		<a href="http://www.pros-pro.com/default.aspx?PageToShow=MyAccount">
 		<font size="2">http://www.pros-pro.com/default.aspx?PageToShow=MyAccount</font></a></font></p>
