--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/basket/warenkorb_functions.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/basket/warenkorb_functions.htm
@@ -1,6 +1,6 @@
 <p align="center">
     <span style="font-family: Verdana; color: red; font-weight: 700"><font size="1">Wir
-        bitten um Verständnis, dass wir auf Grund unserer äußerst knapp kalkulierten Preise<br>
+        bitten um Verständnis, dass wir auf Grund unserer äußerst knapp kalkulierten Preise<br />
 	Bestellungen </font>unter € 36,-<font size="1"> (inklusive 
 	gesetzlicher Mehrwertsteuer / exklusive Versandkosten) nicht bearbeiten
             können!</font></span></p>
