--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
@@ -15,7 +15,7 @@
 								<div align="center">
 									<table border="0" width="96%" id="table24" cellspacing="0" cellpadding="0">
 										<tr>
-											<td><font size="1" color="#DB0F21"><br>
+											<td><font size="1" color="#DB0F21"><br />
 											</font>
 											<b>
 											<font color="#DB0F21" size="1">
@@ -35,10 +35,10 @@
 							<tr>
 								<td>
 							<p align="center">
-							<br>
+							<br />
 							<font color="#DB0F21">
 							<a href="https://www.facebook.com/ProsProTennisartikel" target="_blank">
-							<img border="0" src="http://www.pros-pro.com/skins/skin_arfaian_2009/images/start/facebook.gif" alt="facebook fan page"></a></font><br>
+							<img border="0" src="http://www.pros-pro.com/skins/skin_arfaian_2009/images/start/facebook.gif" alt="facebook fan page"></a></font><br />
 							<font color="#FFFFFF">666</font></td>
 								<td>
 							<font color="#DB0F21">
@@ -48,11 +48,11 @@
 							<tr>
 								<td colspan="2">
 							<p align="center">
-							<br>
+							<br />
 							<b><font color="#E00F22">
-							<span style="font-family: Verdana">new catalogue</span></font></b><br>
+							<span style="font-family: Verdana">new catalogue</span></font></b><br />
 							<a target="_blank">
-								<img border="0" src="http://www.pros-pro.com/download/ProsPro_Katalog2013.gif" vspace="1"></a><br>
+								<img border="0" src="http://www.pros-pro.com/download/ProsPro_Katalog2013.gif" vspace="1"></a><br />
 							<font color="#FFFFFF">666</font></td>
 							</tr>
 							<tr>
@@ -67,16 +67,16 @@
 										<tr>
 											<td><b>
 											<font face="Verdana" color="#0000FF" style="font-size: 8pt">
-						<br>
+						<br />
 											</font>
 						</b><font face="Verdana" style="font-size: 8pt">
 										<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Download">
 						<span style="text-decoration: none">Bedienungsanleitung 
-											Bespannmaschinen</span></a><font color="#0000FF"><br>
+											Bespannmaschinen</span></a><font color="#0000FF"><br />
 											</font>
 										<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Download">
 						<span style="text-decoration: none">Stringing Machine 
-											Manuals</span></a></font><font face="Verdana" color="#0000FF" style="font-size: 8pt"><b><br>
+											Manuals</span></a></font><font face="Verdana" color="#0000FF" style="font-size: 8pt"><b><br />
 						</b>
 											</font>
 											<font face="Verdana" color="#0000FF">
@@ -105,13 +105,13 @@
 										<tr>
 											<td><b>
 											<font face="Verdana" color="#DB0F21" style="font-size: 8pt">
-						<br>
+						<br />
 											</font></b>
 											<font face="Verdana" style="font-size: 8pt">
-											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=AGB">AGB</a><br>
-											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Datenschutz">Datenschutz</a><br>
-											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Kontakt">Kontakt</a><br>
-											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung">Lieferung</a></font><br>
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=AGB">AGB</a><br />
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Datenschutz">Datenschutz</a><br />
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Kontakt">Kontakt</a><br />
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung">Lieferung</a></font><br />
                                             <span style="font-size: 8pt">
                                             <a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Impressum">
                                             Impressum</a></span></td>
@@ -135,7 +135,7 @@
 											<td><font face="Verdana">
 											<font color="#DB0F21" style="font-size: 8pt">
 											<b>
-											<br>
+											<br />
 										</b></font><font style="font-size: 8pt">[BASKET_STATE]<br />
                                                 <font color="#FFFFFF">Newsletter: 
 											</font>[NEWSLETTER]</font></font></td>
