--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/map.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/map.htm
@@ -25,7 +25,7 @@
          </tr>
          <tr>
            <td width='66%' border='0' valign='top' height='1' colspan="2">
-           <font face="Verdana" size="2">Pro's Pro Versand GmbH<br>
+           <font face="Verdana" size="2">Pro's Pro Versand GmbH<br />
 			(bei Arfaian Export-Import Handelsgesellschaft m.b.H.)<br />
            Fröbelstraße 24<br />
            A-4020 Linz</font></td>
