--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_AGB.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_AGB.htm
@@ -38,13 +38,13 @@
 										In Österreich kann die Zahlung per 
 										Nachnahme oder mittels Vorauszahlung 
 										erfolgen. In alle anderen Länder können 
-										wir nur gegen Vorauskasse liefern. <br>
+										wir nur gegen Vorauskasse liefern. <br />
 										Die Gültigkeit der Bestellung wird durch 
 										eine gesonderte Mitteilung per E-Mail 
-										oder telefonisch nochmals bestätigt.<br>
+										oder telefonisch nochmals bestätigt.<br />
 										Falls die Artikel außerhalb Österreichs 
 										geliefert werden sollen, ist es nötig, 
-										die Telefonnummer anzugeben.<br>
+										die Telefonnummer anzugeben.<br />
 										Außerdem behalten wir uns ausdrücklich 
 										vor, bestimmte Artikel nicht außerhalb 
 										Österreichs zu versenden.&nbsp;</span></p>
@@ -79,7 +79,7 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Wenn Sie eine Bestellung aufgeben, 
 										erhalten Sie eine Bestätigung per 
 										E-Mail. Diese Bestätigungsmail stellt 
-										noch keine Annahme dar.<br>
+										noch keine Annahme dar.<br />
 										Die Annahme des Angebots durch uns kann 
 										durch die Auslieferung der Ware erklärt 
 										werden oder in dem wir in sonstiger 
@@ -95,10 +95,10 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										<i>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Widerrufsbelehrung (für österreichische 
-										Verbraucher)<br>
+										Verbraucher)<br />
 										</span></i>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										<br>
+										<br />
 										Wenn Sie eine Privatperson sind und den 
 										Vertrag zu einem Zweck abschließen, der 
 										weder ihrer gewerblichen noch ihrer 
@@ -111,7 +111,7 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Wahrung der Frist im Falle der 
 										Rücksendung genügt die rechtzeitige 
 										Absendung der Rücktrittserklärung an 
-										unten angeführte Adresse.<br>
+										unten angeführte Adresse.<br />
 										Wir halten ausdrücklich fest, dass die 
 										gesamten Kosten der Rücksendung der Ware 
 										im Falle eines Vertragsrücktrittes vom 
@@ -123,7 +123,7 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Ware durch Sie beschädigt wurde.</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										<br>
+										<br />
 										</span><b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Widerrufsrecht (für deutsche 
@@ -157,11 +157,11 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-										Pro's Pro Versand GmbH<br>
+										Pro's Pro Versand GmbH<br />
 										Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, 
-										A-4020 Linz, Austria <br>
+										A-4020 Linz, Austria <br />
 										Telefax:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-										+ 43 (0) 732 660101-40<br>
+										+ 43 (0) 732 660101-40<br />
 										E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 										<a href="mailto:rma@pros-pro.com?subject=Widerruf">
 										rma@pros-pro.com</a></span></p>
@@ -213,13 +213,13 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										erfüllt werden. Die Frist beginnt für 
 										Sie mit der Absendung Ihrer 
 										Widerrufserklärung oder der Sache, für 
-										uns mit deren Empfang. <br>
-										<br>
+										uns mit deren Empfang. <br />
+										<br />
 										Wir haben das Recht, im Falle eines 
 										Widerrufs die zurück zu sendende Sache 
 										durch einen Dienstleister bei Ihnen 
-										abholen zu lassen.<br>
-										<b><i><u><br>
+										abholen zu lassen.<br />
+										<b><i><u><br />
 										Ende der Widerrufsbelehrung</u></i></b></span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -234,15 +234,15 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Adresse für Rücksendungen</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-family: Arial,sans-serif; font-size: 9pt">
-										Pro's Pro Versand GmbH</span><span style="font-size: 9.0pt; font-family: Arial,sans-serif"><br>
-										Fröbelstr. 24<br>
-										4020 Linz<br>
+										Pro's Pro Versand GmbH</span><span style="font-size: 9.0pt; font-family: Arial,sans-serif"><br />
+										Fröbelstr. 24<br />
+										4020 Linz<br />
 										Österreich</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										UNFREIE SENDUNGEN WERDEN NICHT 
-										ANGENOMMEN<br>
-										<br>
+										ANGENOMMEN<br />
+										<br />
 										Im Gewährleistungsfall senden Sie uns 
 										bitte eine Email an
 										<a href="mailto:rma@pros-pro.com?subject=Reklamation">
@@ -250,10 +250,10 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Rechnungsnummer, des Artikels sowie 
 										einer Fehlerbeschreibung. Wir werden die 
 										Abholung des Pakets bei Ihnen 
-										veranlassen.<br>
+										veranlassen.<br />
 										</span><b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										<br>
+										<br />
 										G e w ä h r l e i s t u n g</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -288,12 +288,12 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										F i r m e n d a t e n</span></b></p>
 										<p class="MsoNormal" style="line-height: normal; margin-top: 6.0pt">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Name/Rechtsform: Pro's Pro Versand GmbH<br>
-										Firmensitz: Fröbelstraße 24<br>
-										A-4020 Linz<br>
-										Firmenbuchnummer: 394778 g<br>
-										Firmenbuchgericht: Landesgericht Linz<br>
-										Umsatzsteuer-Identifikationsnummer: ATU67883926<br>
+										Name/Rechtsform: Pro's Pro Versand GmbH<br />
+										Firmensitz: Fröbelstraße 24<br />
+										A-4020 Linz<br />
+										Firmenbuchnummer: 394778 g<br />
+										Firmenbuchgericht: Landesgericht Linz<br />
+										Umsatzsteuer-Identifikationsnummer: ATU67883926<br />
 										Geschäftsführer: Manuel Ertl</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
