--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_GESETZ.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_GESETZ.htm
@@ -39,7 +39,7 @@
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Ihre 
 		Bestellung stellt ein Angebot an uns zum Abschluss eines Vertrages dar. 
 		Wenn Sie eine Bestellung aufgeben, erhalten Sie eine Bestätigung per 
-		E-Mail. Diese Bestätigungsmail stellt noch keine Annahme dar.<br>
+		E-Mail. Diese Bestätigungsmail stellt noch keine Annahme dar.<br />
 		Die Annahme des Angebots durch uns kann durch die Auslieferung der Ware 
 		erklärt werden oder in dem wir in sonstiger Weise in Textform - z. B. 
 		schriftlich oder per E-Mail - die Annahme der Bestellung bestätigen. 
@@ -49,9 +49,9 @@
 		e r r u f s r e c h t </b></span></p>
 		<p class="MsoNormal" style="line-height: normal"><i>
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-		Widerrufsbelehrung (für österreichische Verbraucher)<br>
+		Widerrufsbelehrung (für österreichische Verbraucher)<br />
 		</span></i>
-		<span style="font-size: 9.0pt; font-family: Arial,sans-serif"><br>
+		<span style="font-size: 9.0pt; font-family: Arial,sans-serif"><br />
 		Wenn Sie eine Privatperson sind und den Vertrag zu einem Zweck 
 		abschließen, der weder ihrer gewerblichen noch ihrer selbständigen 
 		beruflichen Tätigkeit zugerechnet werden kann, können Sie Ihre 
@@ -59,14 +59,14 @@
 		nach Erhalt der Ware zurückgeben. Dies ist ohne Angaben von Gründen 
 		möglich. Zur Wahrung der Frist im Falle der Rücksendung genügt die 
 		rechtzeitige Absendung der Rücktrittserklärung an unten angeführte 
-		Adresse.<br>
+		Adresse.<br />
 		Wir halten ausdrücklich fest, dass die gesamten Kosten der Rücksendung 
 		der Ware im Falle eines Vertragsrücktrittes vom Verbraucher zu tragen 
 		sind. Wenn Sie die Ware bereits benutzt haben, sind wir berechtigt, 
 		hierfür eine Vergütung zu verlangen. Ferner sind Sie verpflichtet, die 
-		Wertminderung zu ersetzen, falls die Ware durch Sie beschädigt wurde.<br>
-		<br>
-		<br>
+		Wertminderung zu ersetzen, falls die Ware durch Sie beschädigt wurde.<br />
+		<br />
+		<br />
 		</span><b><i><u>
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Widerrufsrecht 
 		(für deutsche Verbrau</span></u></i></b><u><i><b><span style="font-size: 9.0pt; font-family: Arial,sans-serif">cher)</span></b></i></u></p>
@@ -89,10 +89,10 @@
 		Widerruf ist zu richten an:&nbsp;&nbsp;</span></p>
 		<p class="MsoNormal" style="line-height: normal">
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-		Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pros Pro Versand GmbH<br>
-		Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, A-4020 Linz, Austria <br>
+		Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pros Pro Versand GmbH<br />
+		Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, A-4020 Linz, Austria <br />
 		Telefax:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-		+ 43 (0) 732 660101 - 40<br>
+		+ 43 (0) 732 660101 - 40<br />
 		E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 		rma@pros-pro.com</span></p>
 		<p class="MsoNormal" style="line-height: normal"><b>
@@ -122,11 +122,11 @@
 		kostenfrei. Nicht paketversandfähige Sachen werden bei Ihnen abgeholt. 
 		Verpflichtungen zur Erstattung von Zahlungen müssen innerhalb von 30 
 		Tagen erfüllt werden. Die Frist beginnt für Sie mit der Absendung Ihrer 
-		Widerrufserklärung oder der Sache, für uns mit deren Empfang. <br>
-		<br>
+		Widerrufserklärung oder der Sache, für uns mit deren Empfang. <br />
+		<br />
 		Wir haben das Recht, im Falle eines Widerrufs die zurück zu sendende 
-		Sache durch einen Dienstleister bei Ihnen abholen zu lassen.<br>
-		<b><i><u><br>
+		Sache durch einen Dienstleister bei Ihnen abholen zu lassen.<br />
+		<b><i><u><br />
 		Ende der Widerrufsbelehrung</u></i></b></span></p>
 		<p class="MsoNormal" style="line-height: normal">
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Das 
