--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_lifestyle.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_lifestyle.htm
@@ -49,7 +49,7 @@
 														<tr>
 															<td height="73" valign="top">
 															<b><font color="#FF0000">&nbsp;</font></b><i><b><font color="#CB0C04" size="4">Bitte
-                                                wählen Sie / please choose:<br>
+                                                wählen Sie / please choose:<br />
 															</font>
 															<font color="#FFFFFF" size="4">
 															666</font></b></i><div align="center">
