--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_string.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_string.htm
@@ -46,7 +46,7 @@
 								<font color="#FFFFFF">666</font></td>
 								<td align="left" width="4">
 								<font color="#FFFFFF">666</font></td>
-								<td align="left" width="1000"><br>
+								<td align="left" width="1000"><br />
                                 <b><font color="#FF0000">
                                 &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
 								wählen Sie / please choose:</b></font></i><div align="center">
@@ -107,7 +107,7 @@
 										Synthetik / Multifil 200m</a></div>
 								</div>
 								</b>
-								<p><font color="#CB0C04"><br>
+								<p><font color="#CB0C04"><br />
 								</font><i><font color="#CB0C04" size="4"><b>12m</b></font></i><b><div class="category">
 									<a href="default.asp?PreKatNr=101">:: </a>
 									<a href="default.asp?PreKatNr=37">
