--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_textile.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_textile.htm
@@ -33,7 +33,7 @@
 								<td align="left" width="4">
 								<font color="#FFFFFF">66666666666666666666666</font></td>
 								<td align="left" width="1000">
-								<font color="#FFFFFF">666</font><br>
+								<font color="#FFFFFF">666</font><br />
                                 <b><font color="#FF0000">
                                 &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
 								wählen Sie / please choose:</b></font></i><div align="center">
