--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_tool.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_tool.htm
@@ -34,7 +34,7 @@
 							<tr>
 								<td align="left" width="10">
 								<font color="#FFFFFF">66666666666666666666</font></td>
-								<td align="left" width="1026" rowspan="2"><br>
+								<td align="left" width="1026" rowspan="2"><br />
                                 <b><font color="#FF0000">
                                 &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
 								wählen Sie / please choose:</b></font></i><div align="center">
