--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep3.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep3.htm
@@ -58,7 +58,7 @@ div.Section1
                             <font title="http://www.pros-pro.com/download/agb_arfaian.pdf"><span title="http://www.pros-pro.com/download/agb_arfaian.pdf">
                                 <a title="http://www.pros-pro.com/download/agb_arfaian.pdf" style="color: blue; text-decoration: underline; text-underline: single" href="http://www.pros-pro.com/download/agb.pdf">
 				http://www.pros-pro.com/download/agb.pdf</a></span></font></span></font><font face="Verdana"
-                                    size="2"><span style="font-size: 8pt; font-family: Verdana"> abrufbaren AGB gelten.<br>
+                                    size="2"><span style="font-size: 8pt; font-family: Verdana"> abrufbaren AGB gelten.<br />
                                         &nbsp;</span></font>
             </td>
         </tr>
