--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_AGB.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_AGB.htm
@@ -37,13 +37,13 @@
 										In Österreich kann die Zahlung per 
 										Nachnahme oder mittels Vorauszahlung 
 										erfolgen. In alle anderen Länder können 
-										wir nur gegen Vorauskasse liefern. <br>
+										wir nur gegen Vorauskasse liefern. <br />
 										Die Gültigkeit der Bestellung wird durch 
 										eine gesonderte Mitteilung per E-Mail 
-										oder telefonisch nochmals bestätigt.<br>
+										oder telefonisch nochmals bestätigt.<br />
 										Falls die Artikel außerhalb Österreichs 
 										geliefert werden sollen, ist es nötig, 
-										die Telefonnummer anzugeben.<br>
+										die Telefonnummer anzugeben.<br />
 										Außerdem behalten wir uns ausdrücklich 
 										vor, bestimmte Artikel nicht außerhalb 
 										Österreichs zu versenden.&nbsp;</span></p>
@@ -78,7 +78,7 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Wenn Sie eine Bestellung aufgeben, 
 										erhalten Sie eine Bestätigung per 
 										E-Mail. Diese Bestätigungsmail stellt 
-										noch keine Annahme dar.<br>
+										noch keine Annahme dar.<br />
 										Die Annahme des Angebots durch uns kann 
 										durch die Auslieferung der Ware erklärt 
 										werden oder in dem wir in sonstiger 
@@ -94,10 +94,10 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										<i>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Widerrufsbelehrung (für österreichische 
-										Verbraucher)<br>
+										Verbraucher)<br />
 										</span></i>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										<br>
+										<br />
 										Wenn Sie eine Privatperson sind und den 
 										Vertrag zu einem Zweck abschließen, der 
 										weder ihrer gewerblichen noch ihrer 
@@ -110,7 +110,7 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Wahrung der Frist im Falle der 
 										Rücksendung genügt die rechtzeitige 
 										Absendung der Rücktrittserklärung an 
-										unten angeführte Adresse.<br>
+										unten angeführte Adresse.<br />
 										Wir halten ausdrücklich fest, dass die 
 										gesamten Kosten der Rücksendung der Ware 
 										im Falle eines Vertragsrücktrittes vom 
@@ -119,9 +119,9 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										berechtigt, hierfür eine Vergütung zu 
 										verlangen. Ferner sind Sie verpflichtet, 
 										die Wertminderung zu ersetzen, falls die 
-										Ware durch Sie beschädigt wurde.<br>
-										<br>
-										<br>
+										Ware durch Sie beschädigt wurde.<br />
+										<br />
+										<br />
 										<b><i><u>Widerrufsbelehrung (für 
 										deutsche Verbraucher)</u></i></b></span></p>
 										<p class="MsoNormal" style="line-height: normal">
@@ -154,11 +154,11 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Arfaian 
-										Export-Import Handelsgesellschaft m.b.H.<br>
+										Export-Import Handelsgesellschaft m.b.H.<br />
 										Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, 
-										A-4020 Linz, Austria <br>
+										A-4020 Linz, Austria <br />
 										Telefax: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; + 43 (0) 732 
-										660101 - 40<br>
+										660101 - 40<br />
 										E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 										online@arfaian.com</span></p>
 										<p class="MsoNormal" style="line-height: normal">
@@ -209,13 +209,13 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										erfüllt werden. Die Frist beginnt für 
 										Sie mit der Absendung Ihrer 
 										Widerrufserklärung oder der Sache, für 
-										uns mit deren Empfang. <br>
-										<br>
+										uns mit deren Empfang. <br />
+										<br />
 										Wir haben das Recht, im Falle eines 
 										Widerrufs die zurück zu sendende Sache 
 										durch einen Dienstleister bei Ihnen 
-										abholen zu lassen.<br>
-										<b><i><u><br>
+										abholen zu lassen.<br />
+										<b><i><u><br />
 										Ende der Widerrufsbelehrung</u></i></b></span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -230,10 +230,10 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Adresse für Rücksendungen</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										ARFAIAN EXPORT-IMPORT<br>
-										Handelsgesellschaft mbH<br>
-										Fröbelstr. 24<br>
-										4020 Linz<br>
+										ARFAIAN EXPORT-IMPORT<br />
+										Handelsgesellschaft mbH<br />
+										Fröbelstr. 24<br />
+										4020 Linz<br />
 										Österreich</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
@@ -272,16 +272,16 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										<p class="MsoNormal" style="line-height: normal; margin-top: 6.0pt">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Name/Rechtsform: ARFAIAN EXPORT-IMPORT 
-										Handelsgesellschaft mbH<br>
-										Firmensitz: Blütenstraße 21/8/46<br>
-										A-4040 Linz<br>
-										Betriebsstätte: Fröbelstraße 24<br>
-										A-4020 Linz<br>
-										Firmenbuchnummer: 82801 t<br>
-										Firmenbuchgericht: Landesgericht Linz<br>
+										Handelsgesellschaft mbH<br />
+										Firmensitz: Blütenstraße 21/8/46<br />
+										A-4040 Linz<br />
+										Betriebsstätte: Fröbelstraße 24<br />
+										A-4020 Linz<br />
+										Firmenbuchnummer: 82801 t<br />
+										Firmenbuchgericht: Landesgericht Linz<br />
 										Umsatzsteuer-Identifikationsnummer: ATU 
-										23315801<br>
-										Geschäftsführerin: Doris Hockl<br>
+										23315801<br />
+										Geschäftsführerin: Doris Hockl<br />
 										DVR-Nr. 0454893</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
