--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_tool.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_tool.htm
@@ -28,7 +28,7 @@
 							</tr>
 							<tr>
 								<td align="left" width="505">¡¡</td>
-								<td align="left" width="1000" rowspan="2"><br>
+								<td align="left" width="1000" rowspan="2"><br />
                                 <b><font color="#FF0000">
                                 &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
 								wählen Sie / please choose:</b></font></i><div align="center">
@@ -84,7 +84,7 @@
 										Werkzeug / Tools</a></div>
 									<!--13--></div>
 								</b>
-								<p><font color="#CB0C04"><br>
+								<p><font color="#CB0C04"><br />
 ¡¡</font><b><div class="category">
 									¡¡</div>
 								<table border="0" width="100%" id="table102">
