--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_warenkorbStep3.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_warenkorbStep3.htm
@@ -63,7 +63,7 @@ div.Section1
 			<font title="http://www.arfaian.com/download/agb_arfaian.pdf">
 			<span title="http://www.arfaian.com/download/agb_arfaian.pdf">
 			www.arfaian.com/download/agb_arfaian.pdf</span></font></a></span></font><font face="Verdana" size="2"><span style="font-size: 8pt; font-family: Verdana"> 
-			abrufbaren AGB gelten.<br>
+			abrufbaren AGB gelten.<br />
 &nbsp;</span></font></td>
 		</tr>
 	</table>
