--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPage_part_common.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPage_part_common.htm
@@ -24,7 +24,7 @@
     <td valign="top"  align="center" width="350">
       <table border="0" width="300" id="table30" cellspacing="0" cellpadding="0">
         <tr>
-          <td colspan="2" id="menu"><b><!--[Firma]: --><font color="#C60000"><span itemprop="name">[Bezeichnung]</span><br>
+          <td colspan="2" id="menu"><b><!--[Firma]: --><font color="#C60000"><span itemprop="name">[Bezeichnung]</span><br />
             &nbsp;</font></b></td>
         </tr>
         <tr>
@@ -39,11 +39,11 @@
           <td colspan="2"><img border="0" src="skins/skin6/images/bg/spacer.gif" width="1" height="3"></td>
         </tr>
         <tr>
-          <td bgcolor="#F3F3F3" colspan="2"><font size="1" face="Tahoma"><br>
-            </font><font face="Tahoma">&nbsp;<span itemprop="description">[Beschreibung]</span></font><font size="1" face="Tahoma"><br>
+          <td bgcolor="#F3F3F3" colspan="2"><font size="1" face="Tahoma"><br />
+            </font><font face="Tahoma">&nbsp;<span itemprop="description">[Beschreibung]</span></font><font size="1" face="Tahoma"><br />
             </font><font size="2" face="Tahoma">
-            <br>
-            &nbsp;Artikel Nr: <b><span itemprop="gtin8">[ArtNr]</span></b><br>
+            <br />
+            &nbsp;Artikel Nr: <b><span itemprop="gtin8">[ArtNr]</span></b><br />
 			&nbsp;Produkt EAN: <b><span itemprop="mpn">[EAN]</span></b></font></td>
         </tr>
         <tr>
@@ -66,7 +66,7 @@
         </tr>
         <tr>
           <td bgcolor="#CCCCCC" width="2%">&nbsp;</td>
-          <td bgcolor="#CCCCCC" width="98%">&nbsp;<b><span itemprop="itemCondition">[Bezeichnung1]</span><br>
+          <td bgcolor="#CCCCCC" width="98%">&nbsp;<b><span itemprop="itemCondition">[Bezeichnung1]</span><br />
 &nbsp;</b></td>
           </tr>
         <tr>
